# sle

./: .gitignore  CMakeLists.txt  README.md
include/sle/: buffer.h  buffermanager.h  chorder.h  classarch  cmdline.h  cmdmode.h  cmdmodelexer.h  context.h  coord.h  cursor.h  customtypes.h  debugger.h  dispatcher.h  edit.h  editloop.h  event.h  eventaction.h  filehandler.h  finder.h  insertmode.h  linetype.h  mainscreen.h  modebase.h  modeline.h  modeloop.h  normalmode.h  normalmodelexer.h  pager.h  point.h  poll.h  screen.h  screenmanager.h  sidebar.h  test.h  types.h
src/: CMakeLists.txt  buffer.cpp  buffermanager.cpp  chorder.cpp  cmdline.cpp  cmdmode.cpp  cmdmodelex.l  cursor.cpp  dispatcher.cpp  edit.cpp  editloop.cpp  filehandler.cpp  finder.cpp  insertmode.cpp  linetype.cpp  main.cpp  mainscreen.cpp  modeline.cpp  modeloop.cpp  normalmode.cpp  normalmodelex.l  pager.cpp  poll.cpp  screen.cpp  screenmanager.cpp  sidebar.cpp  test.cpp
